[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Transitions/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/UI/ui_characters.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/ui_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/ui_main_back.png" type="Texture" id=6]
[ext_resource path="res://src/Popups/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://src/Popups/Buttons/OptionsButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Popups/Buttons/NewGameButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Popups/Buttons/ContinueButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/UI/mvboli.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 72
use_filter = true
extra_spacing_top = -15
extra_spacing_bottom = -15
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
extra_spacing_top = -15
extra_spacing_bottom = -15
font_data = ExtResource( 11 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 240
custom_constants/margin_top = 90
custom_constants/margin_left = 240
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 240.0
margin_top = 90.0
margin_right = 1040.0
margin_bottom = 620.0

[node name="CenterContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 87.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_right = 800.0
margin_bottom = 87.0

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 87.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 397.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "SLACKER"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 800.0
margin_bottom = 530.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 360.0
margin_bottom = 439.0

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 425.0
size_flags_vertical = 3
alignment = 1

[node name="ContinueButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 10 )]
margin_top = 136.0
margin_bottom = 184.0
rect_min_size = Vector2( 360, 48 )
custom_styles/hover = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.498039 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )

[node name="NewGameButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 9 )]
margin_top = 188.0
margin_bottom = 236.0
rect_min_size = Vector2( 360, 48 )
custom_styles/hover = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.498039 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )

[node name="OptionsButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 8 )]
margin_top = 240.0
margin_bottom = 288.0
rect_min_size = Vector2( 360, 48 )
custom_styles/hover = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.498039 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 429.0
margin_right = 360.0
margin_bottom = 439.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Version 1.0"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 364.0
margin_right = 800.0
margin_bottom = 439.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_left = 90.0
margin_top = 91.0
margin_right = 346.0
margin_bottom = 347.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 1 )]
visible = false
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MenuOptions/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
